--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "lodash": "^4.17.21",
@@ -23,7 +24,9 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
