--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "iconoir-react-native": "^5.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "17.0.2",
@@ -24,6 +25,8 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
