--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.6",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
