--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "react-native-gesture-handler": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
