--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
@@ -17,12 +21,15 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "iconoir-react-native": "^5.4.1",
+    "jest": "^29.3.1",
+    "jest-expo": "^47.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.6",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
@@ -30,11 +37,11 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "react-native-gesture-handler": "~2.2.1"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "^11.5.0",
     "eslint": "^8.28.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -43,7 +50,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "prettier": "2.8.0"
+    "prettier": "2.8.0",
+    "react-test-renderer": "^17.0.2"
   },
   "private": true
 }
